# esp32-homekit-camera

./: .gitmodules  CMakeLists.txt  Makefile  README.md  esp32-camera.patch  partitions.csv  sdkconfig
components/camera/: camera.c  xclk.c
components/camera/include/: camera.h
components/libjpeg/: CMakeLists.txt  Makefile.projbuild  component.mk
components/libjpeg/jpeg-6b/: jconfig.h
components/libswscale/: Makefile.projbuild  component.mk  config.h
components/libswscale/libavutil/: ffversion.h
components/x264/: CMakeLists.txt  Makefile.projbuild  component.mk  config.h  gen_5ones.c  gen_cabac.c  gen_vlc.c
components/x264/x264-snapshot-20181221-2245-stable/common/: base.c  bitstream.h  cabac.c  cabac.inc  tables.c  tables.h  vlc.c  vlc.inc
components/x264/x264-snapshot-20181221-2245-stable/encoder/: cavlc.c  encoder.c  rdo.c  rdo.inc
main/: CMakeLists.txt  Kconfig.projbuild  Makefile.projbuild  accessory.c  accessory.h  app_main.c  camera.h  camera_session.c  component.mk  config.h  streaming.c
